test/negative/missing_input.net
OUTPUT a
VAR a
IN
a = 0
